# case-ds

./: .gitignore  README.md  pyproject.toml
notebooks/: compilado.ipynb  criar_abt.ipynb  criar_modelo.ipynb  eda.ipynb  explorar_target.ipynb  pos_modelo.ipynb
src/: calculate_psi.py  convert_to_datetime.py  criar_abt.ipynb  criar_modelo.ipynb  eda.ipynb  experiment.py  explorar_target.ipynb  load_df.py  prediction_report.py
src/utils/: RankCountVectorizer.py
