[project]
name = "case-ds"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boruta>=0.4.3",
    "catboost>=1.2.8",
    "category-encoders>=2.9.0",
    "fastparquet>=2024.11.0",
    "feature-engine>=1.9.3",
    "imbalanced-learn==0.14.0",
    "ipykernel>=6.30.1",
    "lightgbm==4.6.0",
    "matplotlib==3.10.6",
    "numpy==2.3.3",
    "optuna>=4.5.0",
    "pandas==2.3.3",
    "pyarrow>=21.0.0",
    "requests>=2.32.5",
    "scikit-learn==1.7.2",
    "scikit-plot>=0.3.7",
    "seaborn==0.13.2",
    "shap>=0.49.1",
    "xgboost>=3.1.0",
]
